len-64230173.out
  File "/nemo/lab/briscoej/home/users/maizelr/transcriptomics/extra_thesis_analysis/length_analysis.py", line 43
    with multiprocessing.Pool(processes=int(multiprocessing.cpu_count()-4)) as pool:
    ^
IndentationError: expected an indented block after function definition on line 42
